// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`calculate simulations-auto-entrepreneur > ACRE 1`] = `
"dirigeant . auto-entrepreneur . chiffre d'affaires: 22831
dirigeant . auto-entrepreneur . cotisations et contributions: 236
dirigeant . auto-entrepreneur . revenu net: 20000
dirigeant . auto-entrepreneur . revenu net . après impôt: 20000
dirigeant . rémunération . impôt: 0

Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-auto-entrepreneur > ACRE 2`] = `
"dirigeant . auto-entrepreneur . chiffre d'affaires: 21345
dirigeant . auto-entrepreneur . cotisations et contributions: 112
dirigeant . auto-entrepreneur . revenu net: 20000
dirigeant . auto-entrepreneur . revenu net . après impôt: 20000
dirigeant . rémunération . impôt: 0

Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-auto-entrepreneur > ACRE 3`] = `
"dirigeant . auto-entrepreneur . chiffre d'affaires: 32017
dirigeant . auto-entrepreneur . cotisations et contributions: 168
dirigeant . auto-entrepreneur . revenu net: 30000
dirigeant . auto-entrepreneur . revenu net . après impôt: 30000
dirigeant . rémunération . impôt: 0

Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-auto-entrepreneur > ACRE 4`] = `
"dirigeant . auto-entrepreneur . chiffre d'affaires: 45675
dirigeant . auto-entrepreneur . cotisations et contributions: 473
dirigeant . auto-entrepreneur . revenu net: 40000
dirigeant . auto-entrepreneur . revenu net . après impôt: 40000
dirigeant . rémunération . impôt: 0

Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-auto-entrepreneur > ACRE 5`] = `
"dirigeant . auto-entrepreneur . chiffre d'affaires: 22831
dirigeant . auto-entrepreneur . cotisations et contributions: 236
dirigeant . auto-entrepreneur . revenu net: 20000
dirigeant . auto-entrepreneur . revenu net . après impôt: 20000
dirigeant . rémunération . impôt: 0

Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-auto-entrepreneur > DROM 1`] = `
"dirigeant . auto-entrepreneur . chiffre d'affaires: 20000
dirigeant . auto-entrepreneur . cotisations et contributions: 207
dirigeant . auto-entrepreneur . revenu net: 17520
dirigeant . auto-entrepreneur . revenu net . après impôt: 17520
dirigeant . rémunération . impôt: 0

Notifications affichées : dirigeant . auto-entrepreneur . exonération DROM"
`;

exports[`calculate simulations-auto-entrepreneur > activité mixte 1`] = `
"dirigeant . auto-entrepreneur . chiffre d'affaires: 20000
dirigeant . auto-entrepreneur . cotisations et contributions: 281
dirigeant . auto-entrepreneur . revenu net: 16630
dirigeant . auto-entrepreneur . revenu net . après impôt: 16630
dirigeant . rémunération . impôt: 0

Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-auto-entrepreneur > activité mixte 2`] = `
"dirigeant . auto-entrepreneur . chiffre d'affaires: 20000
dirigeant . auto-entrepreneur . cotisations et contributions: 306
dirigeant . auto-entrepreneur . revenu net: 16333
dirigeant . auto-entrepreneur . revenu net . après impôt: 16333
dirigeant . rémunération . impôt: 0

Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-auto-entrepreneur > activité mixte 3`] = `
"dirigeant . auto-entrepreneur . chiffre d'affaires: 20000
dirigeant . auto-entrepreneur . cotisations et contributions: 290
dirigeant . auto-entrepreneur . revenu net: 16518
dirigeant . auto-entrepreneur . revenu net . après impôt: 16518
dirigeant . rémunération . impôt: 0

Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-auto-entrepreneur > activité mixte 4`] = `
"dirigeant . auto-entrepreneur . chiffre d'affaires: undefined
dirigeant . auto-entrepreneur . cotisations et contributions: 689
dirigeant . auto-entrepreneur . revenu net: undefined
dirigeant . auto-entrepreneur . revenu net . après impôt: undefined
dirigeant . rémunération . impôt: 792"
`;

exports[`calculate simulations-auto-entrepreneur > activités 1`] = `
"dirigeant . auto-entrepreneur . chiffre d'affaires: 20000
dirigeant . auto-entrepreneur . cotisations et contributions: 355
dirigeant . auto-entrepreneur . revenu net: 15740
dirigeant . auto-entrepreneur . revenu net . après impôt: 15740
dirigeant . rémunération . impôt: 0

Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-auto-entrepreneur > activités 2`] = `
"dirigeant . auto-entrepreneur . chiffre d'affaires: 20000
dirigeant . auto-entrepreneur . cotisations et contributions: 357
dirigeant . auto-entrepreneur . revenu net: 15720
dirigeant . auto-entrepreneur . revenu net . après impôt: 15720
dirigeant . rémunération . impôt: 0

Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-auto-entrepreneur > activités 3`] = `
"dirigeant . auto-entrepreneur . chiffre d'affaires: 20000
dirigeant . auto-entrepreneur . cotisations et contributions: 214
dirigeant . auto-entrepreneur . revenu net: 17432
dirigeant . auto-entrepreneur . revenu net . après impôt: 17432
dirigeant . rémunération . impôt: 0

Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-auto-entrepreneur > activités 4`] = `
"dirigeant . auto-entrepreneur . chiffre d'affaires: 20000
dirigeant . auto-entrepreneur . cotisations et contributions: 366
dirigeant . auto-entrepreneur . revenu net: 15604
dirigeant . auto-entrepreneur . revenu net . après impôt: 15604
dirigeant . rémunération . impôt: 0

Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-auto-entrepreneur > activités 5`] = `
"dirigeant . auto-entrepreneur . chiffre d'affaires: 20000
dirigeant . auto-entrepreneur . cotisations et contributions: 207
dirigeant . auto-entrepreneur . revenu net: 17520
dirigeant . auto-entrepreneur . revenu net . après impôt: 17520
dirigeant . rémunération . impôt: 0

Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-auto-entrepreneur > activités 6`] = `
"dirigeant . auto-entrepreneur . chiffre d'affaires: 20000
dirigeant . auto-entrepreneur . cotisations et contributions: 356
dirigeant . auto-entrepreneur . revenu net: 15728
dirigeant . auto-entrepreneur . revenu net . après impôt: 15728
dirigeant . rémunération . impôt: 0

Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-auto-entrepreneur > aides 1`] = `
"dirigeant . auto-entrepreneur . chiffre d'affaires: 5708
dirigeant . auto-entrepreneur . cotisations et contributions: 59
dirigeant . auto-entrepreneur . revenu net: 5000
dirigeant . auto-entrepreneur . revenu net . après impôt: 5000
dirigeant . rémunération . impôt: 0

Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-auto-entrepreneur > aides 2`] = `
"dirigeant . auto-entrepreneur . chiffre d'affaires: 57092
dirigeant . auto-entrepreneur . cotisations et contributions: 591
dirigeant . auto-entrepreneur . revenu net: 50000
dirigeant . auto-entrepreneur . revenu net . après impôt: 49910
dirigeant . rémunération . impôt: 90

Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-auto-entrepreneur > impôt sur le revenu 1`] = `
"dirigeant . auto-entrepreneur . chiffre d'affaires: 31766
dirigeant . auto-entrepreneur . cotisations et contributions: 564
dirigeant . auto-entrepreneur . revenu net: 25000
dirigeant . auto-entrepreneur . revenu net . après impôt: 24301
dirigeant . rémunération . impôt: 699

Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-auto-entrepreneur > échelle de revenus 1`] = `
"dirigeant . auto-entrepreneur . chiffre d'affaires: 571
dirigeant . auto-entrepreneur . cotisations et contributions: 6
dirigeant . auto-entrepreneur . revenu net: 500
dirigeant . auto-entrepreneur . revenu net . après impôt: 500
dirigeant . rémunération . impôt: 0

Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-auto-entrepreneur > échelle de revenus 2`] = `
"dirigeant . auto-entrepreneur . chiffre d'affaires: 1142
dirigeant . auto-entrepreneur . cotisations et contributions: 12
dirigeant . auto-entrepreneur . revenu net: 1000
dirigeant . auto-entrepreneur . revenu net . après impôt: 1000
dirigeant . rémunération . impôt: 0

Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-auto-entrepreneur > échelle de revenus 3`] = `
"dirigeant . auto-entrepreneur . chiffre d'affaires: 2283
dirigeant . auto-entrepreneur . cotisations et contributions: 24
dirigeant . auto-entrepreneur . revenu net: 2000
dirigeant . auto-entrepreneur . revenu net . après impôt: 2000
dirigeant . rémunération . impôt: 0

Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-auto-entrepreneur > échelle de revenus 4`] = `
"dirigeant . auto-entrepreneur . chiffre d'affaires: 5708
dirigeant . auto-entrepreneur . cotisations et contributions: 59
dirigeant . auto-entrepreneur . revenu net: 5000
dirigeant . auto-entrepreneur . revenu net . après impôt: 5000
dirigeant . rémunération . impôt: 0

Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-auto-entrepreneur > échelle de revenus 5`] = `
"dirigeant . auto-entrepreneur . chiffre d'affaires: 11416
dirigeant . auto-entrepreneur . cotisations et contributions: 118
dirigeant . auto-entrepreneur . revenu net: 10000
dirigeant . auto-entrepreneur . revenu net . après impôt: 10000
dirigeant . rémunération . impôt: 0

Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-auto-entrepreneur > échelle de revenus 6`] = `
"dirigeant . auto-entrepreneur . chiffre d'affaires: 22831
dirigeant . auto-entrepreneur . cotisations et contributions: 236
dirigeant . auto-entrepreneur . revenu net: 20000
dirigeant . auto-entrepreneur . revenu net . après impôt: 20000
dirigeant . rémunération . impôt: 0

Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-auto-entrepreneur > échelle de revenus 7`] = `
"dirigeant . auto-entrepreneur . chiffre d'affaires: 57092
dirigeant . auto-entrepreneur . cotisations et contributions: 591
dirigeant . auto-entrepreneur . revenu net: 50000
dirigeant . auto-entrepreneur . revenu net . après impôt: 49910
dirigeant . rémunération . impôt: 90

Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-auto-entrepreneur > échelle de revenus 8`] = `
"dirigeant . auto-entrepreneur . chiffre d'affaires: 79923
dirigeant . auto-entrepreneur . cotisations et contributions: 827
dirigeant . auto-entrepreneur . revenu net: 70000
dirigeant . auto-entrepreneur . revenu net . après impôt: 68852
dirigeant . rémunération . impôt: 1148

Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-auto-entrepreneur > échelle de revenus 9`] = `
"dirigeant . auto-entrepreneur . chiffre d'affaires: 114169
dirigeant . auto-entrepreneur . cotisations et contributions: 1181
dirigeant . auto-entrepreneur . revenu net: 100000
dirigeant . auto-entrepreneur . revenu net . après impôt: 96474
dirigeant . rémunération . impôt: 3526"
`;

exports[`calculate simulations-auto-entrepreneur > échelle de revenus 10`] = `
"dirigeant . auto-entrepreneur . chiffre d'affaires: 1141745
dirigeant . auto-entrepreneur . cotisations et contributions: 11812
dirigeant . auto-entrepreneur . revenu net: 1000000
dirigeant . auto-entrepreneur . revenu net . après impôt: 870378
dirigeant . rémunération . impôt: 129622

Notifications affichées : entreprise . imposition . régime . micro-entreprise . alerte seuil dépassés"
`;
